--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:17-jdk-alpine
 VOLUME /tmp
-COPY target/*.war luntpc04659_Assignment.war
-ENTRYPOINT ["java","-war","/luntpc04659_Assignment.war"]
+COPY target/*.jar luntpc04659_Assignment.jar
+ENTRYPOINT ["java","-jar","/luntpc04659_Assignment.jar"]
 EXPOSE 8080
