--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>luntpc04659_Assignment</groupId>
   <artifactId>luntpc04659_Assignment</artifactId>
   <version>1.0</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <name>luntpc04659</name>
   <dependencies>
 	  <dependency>
